--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,9 @@
 		"laravel/framework": "4.2.*",
 		"barryvdh/laravel-ide-helper": "1.*"
 	},
+    "require-dev": {
+        "way/generators": "~2.0"
+    },
 	"autoload": {
 		"classmap": [
 			"app/commands",
